[devkit] IJPL-225132 SIOOBE: TestDataNavigationHandler.getFileNames
GitOrigin-RevId: fc472f9aa2d0a25e841aabf3c360bf9ab7edc821