@@ -37,7 +37,8 @@ public class TestDataNavigationHandler implements GutterIconNavigationHandler<Ps
   static @NotNull List<TestDataFile> getFileNames(PsiMethod method, boolean collectByExistingFiles) {
     List<TestDataFile> fileNames = null;
     String testDataPath = TestDataLineMarkerProvider.getTestDataBasePath(method.getContainingClass());
-    if (testDataPath != null) {
+    if (testDataPath != null
+        && method.getName().length() > 4) {
       fileNames = new TestDataReferenceCollector(testDataPath, method.getName().substring(4)).collectTestDataReferences(method, collectByExistingFiles);
     }
 
@@ -54,7 +55,7 @@ public class TestDataNavigationHandler implements GutterIconNavigationHandler<Ps
                               Project project) {
     if (testDataFiles.isEmpty()) return;
     if (testDataFiles.size() == 1) {
-      TestDataUtil.openOrAskToCreateFile(project, testDataFiles.get(0));
+      TestDataUtil.openOrAskToCreateFile(project, testDataFiles.getFirst());
       return;
     }
     else if (testDataFiles.size() == 2) {
